--- a/src/LearnCompiler/wwwroot/css/manual.css
+++ b/src/LearnCompiler/wwwroot/css/manual.css
@@ -1,6 +1,6 @@
 ﻿img {
-    height: 30vh !important;
-    width: auto !important;
+    height: auto !important;
+    width: 35% !important;
 }
 
 .card-body{
