--- a/src/LearnCompiler/Views/Home/Index.cshtml
+++ b/src/LearnCompiler/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home";
 }
 
 <script src="~/js/core/lexicalAnalysisController.js"></script>
