--- a/src/LearnCompiler/Views/Shared/_Layout.cshtml
+++ b/src/LearnCompiler/Views/Shared/_Layout.cshtml
@@ -22,9 +22,6 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Documentação</a>
                             <div class="dropdown-menu">
@@ -33,7 +30,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">Sobre</a>
                         </li>
                     </ul>
                 </div>
@@ -46,11 +43,17 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2020 - VL-D+ - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    <!-- Footer -->
+    <footer class="page-footer font-small border-top">
+
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">
+            &copy; @Html.Raw(DateTime.Now.Year) - VL-D+ - by <a href="https://github.com/Phengaris">Sabrina Nawcki</a>
         </div>
+        <!-- Copyright -->
+
     </footer>
+    <!-- Footer -->
 
     @RenderSection("Scripts", required: false)
 </body>
