update about page fixed block calls on syntax analysis

--- a/src/LearnCompiler/Views/Home/Index.cshtml
+++ b/src/LearnCompiler/Views/Home/Index.cshtml
@@ -45,7 +45,8 @@
                 <div id="inputContainer" class="w-100">
                     <textarea id="userCode"
                               onkeyup="TextBoxComponent.onKeyUp(event)"
-                              onpaste="TextBoxComponent.onPaste(event)"></textarea>
+                              onpaste="TextBoxComponent.onPaste(event)"
+                              spellcheck="false"></textarea>
                 </div>
             </div>
         </div>
@@ -109,6 +110,7 @@
 
 <script>
     window.onload = function () {
+        document.getElementById("recompileButton").click();
         TextBoxComponent.init()
     };
     document.getElementById("defaultOpen").click();
