fixed scroll bar to be always in the bottom

--- a/src/LearnCompiler/Views/Home/Index.cshtml
+++ b/src/LearnCompiler/Views/Home/Index.cshtml
@@ -72,7 +72,7 @@
 
             <div id="symbolTable" class="tabContent wrapper">
                 <div class="scrollable-row">
-                    <div class="scrollable-container">
+                    <div id="symbolTableContent" class="scrollable-container">
                         <table class="table">
                             <thead>
                                 <tr>
