--- a/src/LearnCompiler/Views/Home/Index.cshtml
+++ b/src/LearnCompiler/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
         <div class="col-4">
             <div class="pb-1">
                 <label><strong>SEU CÓDIGO EM D+</strong></label>
-                <button id="recompileButton" class="btn btn-sm btn-danger float-right" hidden="hidden" onclick="LexicalAnalysis.onRecompileClick()">Recompilar</button>
+                <button id="recompileButton" class="btn btn-sm btn-danger float-right" hidden="hidden" onclick="TextBoxComponent.onRecompileClick()">Recompilar</button>
             </div>
             <div class="w-100 position-relative">
                 <div id="highlighterContainer" class="h-100" onclick="TextBoxComponent.onClick()" contenteditable="true">
